--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -135,12 +135,21 @@ jobs:
           go install github.com/quay/clair/v4/cmd/clairctl@latest
           echo "${HOME}/go/bin" >> $GITHUB_PATH
 
-      # ✅ Build image from Dockerfile (if required)
-      - name: Build Docker Image
+
+      # ✅ Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # ✅ Build and push image to Docker Hub (if required)
+      - name: Build and Push Docker Image
         if: ${{ github.event.inputs.scan_type == 'dockerfile' }}
         run: |
-          IMAGE_NAME=my-local-app:${{ github.sha }}
+          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-tag }}
           docker build -t $IMAGE_NAME -f "${{ github.event.inputs.dockerfile_path }}" .
+          docker push $IMAGE_NAME
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
       # ✅ Set image name for scan
