--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -33,9 +33,17 @@ jobs:
               echo "Error: You must provide a Dockerfile path when scan_type is 'dockerfile'." >&2
               exit 1
             fi
+            if [[ -n "${{ github.event.inputs.image_url }}" ]]; then
+              echo "Error: Do not provide a remote image when scan_type is 'dockerfile'." >&2
+              exit 1
+            fi
           elif [[ "${{ github.event.inputs.scan_type }}" == "image" ]]; then
             if [[ -z "${{ github.event.inputs.image_url }}" ]]; then
               echo "Error: You must provide an image URL when scan_type is 'image'." >&2
+              exit 1
+            fi
+            if [[ -n "${{ github.event.inputs.dockerfile_path }}" && "${{ github.event.inputs.dockerfile_path }}" != "./Dockerfile" ]]; then
+              echo "Error: Do not provide a Dockerfile path when scan_type is 'image'." >&2
               exit 1
             fi
           fi
