--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -33,10 +33,7 @@ jobs:
               echo "Error: You must provide a Dockerfile path when scan_type is 'dockerfile'." >&2
               exit 1
             fi
-            if [[ -n "${{ github.event.inputs.image_url }}" ]]; then
-              echo "Error: Do not provide a remote image when scan_type is 'dockerfile'." >&2
-              exit 1
-            fi
+            # Ignore remote image name and tag fields
           elif [[ "${{ github.event.inputs.scan_type }}" == "image" ]]; then
             if [[ -z "${{ github.event.inputs.image_url }}" ]]; then
               echo "Error: You must provide an image URL when scan_type is 'image'." >&2
@@ -155,9 +152,14 @@ jobs:
       - name: Build and Push Docker Image
         if: ${{ github.event.inputs.scan_type == 'dockerfile' }}
         run: |
-          IMAGE_NAME=${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-tag }}
-          docker build -t $IMAGE_NAME -f "${{ github.event.inputs.dockerfile_path }}" .
-          docker push $IMAGE_NAME
+          if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" || -z "${{ github.event.inputs.image-name }}" || -z "${{ github.event.inputs.image-tag }}" ]]; then
+            echo "Error: DOCKERHUB_USERNAME, image-name, and image-tag must be set and non-empty." >&2
+            exit 1
+          fi
+          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-tag }}"
+          echo "Building Docker image: $IMAGE_NAME"
+          docker build -t "$IMAGE_NAME" -f "${{ github.event.inputs.dockerfile_path }}" .
+          docker push "$IMAGE_NAME"
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
       # ✅ Set image name for scan
