--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -148,18 +148,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # ✅ Build and push image to Docker Hub (if required)
-      - name: Build and Push Docker Image
+      # ✅ Build Docker image and scan (local, no push)
+      - name: Build & Scan Dockerfile
         if: ${{ github.event.inputs.scan_type == 'dockerfile' }}
         run: |
-          if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" || -z "${{ github.event.inputs.image-name }}" || -z "${{ github.event.inputs.image-tag }}" ]]; then
-            echo "Error: DOCKERHUB_USERNAME, image-name, and image-tag must be set and non-empty." >&2
-            exit 1
-          fi
-          IMAGE_NAME="${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.inputs.image-name }}:${{ github.event.inputs.image-tag }}"
-          echo "Building Docker image: $IMAGE_NAME"
-          docker build -t "$IMAGE_NAME" -f "${{ github.event.inputs.dockerfile_path }}" .
-          docker push "$IMAGE_NAME"
+          IMAGE_NAME=my-local-app:${{ github.sha }}
+          docker build -t $IMAGE_NAME -f "${{ github.event.inputs.dockerfile_path }}" .
+          mkdir -p clair-reports
+          clairctl report -o json --host http://localhost:6060 "$IMAGE_NAME" > clair-reports/clair-report.json
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
 
       # ✅ Set image name for scan
