--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -152,13 +152,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build Docker image only
-      - name: Build Docker image
+
+      # Build, tag, and push Docker image to Docker Hub
+      - name: Build, tag, and push Docker image
         if: ${{ github.event.inputs.scan_type == 'dockerfile' }}
         run: |
           IMAGE_NAME=my-local-app:${{ github.sha }}
           docker build -t $IMAGE_NAME -f "${{ github.event.inputs.dockerfile_path }}" .
-          echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
+          DOCKERHUB_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/my-local-app:${{ github.sha }}
+          docker tag $IMAGE_NAME $DOCKERHUB_IMAGE
+          echo "Logging in to Docker Hub..."
+          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          docker push $DOCKERHUB_IMAGE
+          echo "IMAGE_NAME=$DOCKERHUB_IMAGE" >> $GITHUB_ENV
 
 
       # ✅ Set image name for scan
