--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -193,7 +193,7 @@ jobs:
         run: |
           curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_TOKEN }}" \
-            -F "file=@report.json;type=application/json" \
+            -F "file=@clair-reports/clair-report.json;type=application/json" \
             -F "scan_type=Clair Scan" \
             -F "engagement_name=clair" \
             -F "product_name=MyProduct" \
