created a clair pipeline for end-to-end testing

--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -191,10 +191,16 @@ jobs:
       # ✅ Upload Clair Report to DefectDojo
       - name: Upload Clair report to DefectDojo
         run: |
-          curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
-            -H "Authorization: Token ${{ secrets.DEFECTDOJO_TOKEN }}" \
-            -F "file=@clair-reports/clair-report.json;type=application/json" \
-            -F "scan_type=Clair Scan" \
-            -F "engagement_name=clair" \
-            -F "product_name=MyProduct" \
-            -F "auto_create_context=true"
+          echo "Checking if report.json exists..."
+          ls -lh ${{ github.workspace }}/clair-reports/
+
+          echo "Uploading Clair scan to DefectDojo..."
+          curl -v -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
+          -H "Authorization: Token ${{ secrets.DEFECTDOJO_TOKEN }}" \
+          -F "file=@${{ github.workspace }}/clair-reports/report.json;type=application/json" \
+          -F "scan_type=Clair Scan" \
+          -F "active=true" \
+          -F "verified=true" \
+          -F "auto_create_context=true" \
+          -F "product_name=MyProduct" \
+          -F "engagement_name=clair"
