--- a/.github/workflows/clair-scan.yaml
+++ b/.github/workflows/clair-scan.yaml
@@ -179,7 +179,7 @@ jobs:
           curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
             -H "Authorization: Token ${{ secrets.DEFECTDOJO_TOKEN }}" \
             -F "file=@report.json;type=application/json" \
-            -F "scan_type=Clair Scan" \
+            -F "scan_type=Generic Findings Import" \
             -F "engagement_name=clair" \
             -F "product_name=MyProduct" \
             -F "auto_create_context=true"
